--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/react-datepicker": "4.4.2",
+    "axios": "0.27.2",
     "react": "^18.2.0",
     "react-datepicker": "4.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "9.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
